기본 객체들

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,7 +14,8 @@
     <li>표준 표현식 구문
        <ul>
            <li><a href="/basic/variable">변수 - SpringEL</a></li>
-           <li><a href="/basic/basic-object?paramData=HelloParam">기본 객체들</a></li>
+           <li><a href="/basic/basic-objects?paramData=HelloParam">기본 객체들(스프링부트 3.0 이상)</a></li>
+           <li><a href="/basic/basic-objects/old?paramData=HelloParam">기본 객체들(스프링부트 3.0 미만)</a></li>
            <li><a href="/basic/date">유틸리티 객체와 날짜</a></li>
            <li><a href="/basic/link">링크 URL</a></li>
            <li><a href="/basic/literal">리터럴</a></li>
