--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,7 +39,7 @@
     </li>
     <li>주석 및 블록
         <ul>
-            <li><a href="/basic/comments">주식</a></li>
+            <li><a href="/basic/comments">주석</a></li>
             <li><a href="/basic/block">블록</a></li>
         </ul>
     </li>
